--- a/style.css
+++ b/style.css
@@ -233,6 +233,14 @@ body
     font-size: 1em;
 }
 
+#botao_retorna
+{
+  position: fixed;
+  top: 3rem;      
+  left: 3rem;      
+  z-index: 1000;
+}
+
 #conteiner_gerenciador
  {
     width: 70vw;
@@ -295,6 +303,7 @@ body
 {
     display: flex;
     flex-direction: row;
+    justify-self: flex-end;
     gap :1em;
     padding: 1em;
 }
@@ -339,6 +348,7 @@ body
     font-weight: 700;
     color: var(--primary-text-color); 
     justify-content: flex-start;
+    width: 50%;
 }
 
 #escolha_mes 
@@ -466,7 +476,7 @@ body
     border-width: 0.15em;
     border-style: solid;
 
-    padding: 0;
+    padding: 0.25em;
 
     transition:background-color 0.3s, color 0.3s;
 }
@@ -500,7 +510,14 @@ button
 #botao_adicionaTarefa {
     color: var(--secondary-text-color);
     justify-content: flex-start;
+
+    p
+    {
+      margin:0;  
+    }
 }
+
+
 
 .botao_deletaTarefa
 {
